fix stupid mistakes

--- a/spelling/index.html
+++ b/spelling/index.html
@@ -35,7 +35,7 @@
                     <div class="fiftySplit">
                         <p id="timer" style="text-align:right;">Press submit to start timer</p>
                     </div>
-                    <p><a href="/about" target="_blank">About this project</p>
+                    <p><a href="about/" target="_blank">About this project</a></p>
                 </div>
             </div>
             <div class="twentySplit">
