--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/global/gloablStyle.css">
+<link rel="stylesheet" href="aboutStyle.css">
 <title>Thomas Boxall | About</title>
 
 <script
@@ -24,8 +25,28 @@
     <p>I'm Thomas, a 19 year old Computer Science student studying at the University of Portsmouth.</p>
     
     <h2>Skills</h2>
-    <p class="italic">Cool graphical thing coming soon.</p>
-
+    <p>I've got lots of different skills, and different categories of skills.
+    <h3>Programming & Software Development</h3>
+    <div class="skills-gallery">
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" class="skill-image"/>  
+        </div>
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-line.svg" class="skill-image"/>
+        </div>
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" class="skill-image"/>
+        </div>
+    </div>
+    <h3>Content Creation & Digital Marketing</h3>
+    <div class="skills-gallery">
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" class="skill-image"/>
+        </div>
+        <div class="skill">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-plain.svg" class="skill-image"/>
+        </div>
+    </div>
     <h2>Venturer Camp</h2>
     <p>For a charity called <a href="https://woodcraft.org.uk">Woodcraft Folk</a>, I am coordinating a youth summer camp for 13 to 17 year olds. The camp will take place in the summer of 2023 at one of the charities campsite in Herefordshire. For more information about the camp, check out <a href="https://venturercamp.org.uk">our website</a>.</p>
 </main>
