--- a/contact/index.html
+++ b/contact/index.html
@@ -20,6 +20,6 @@
     <h1>Contact</h1>
 </header>
 <main>
-    <p>If you want to get in touch with me, the easiest thing to do is to drop me an email to <a href="mailto:thomas@thomasboxall.net">thomas@thomasboxall.net</a>.</p>
+    <p>If you want to get in touch with me drop me an email to <a href="mailto:thomas@thomasboxall.net">thomas@thomasboxall.net</a>.</p>
 </main>
 <div id="footer">
