--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 
 <main>
-    <h1>Thomas Boxall</h1>
+    <h1 class="mono"><span class="green">&lt;</span>Thomas Boxall<span class="green">/&gt;</span></h1>
     <p class="italic center big-font">Can sometimes make computers do things</p>
     <div class="space"></div>
-    <ul class="links big-font">
+    <ul class="links big-font center">
         <li><a href="/about/">About </a></li>
         <li><a href="/projects/">Projects </a></li>
         <li><a href="/contact/">Contact</a></li>
