--- a/projects/index.html
+++ b/projects/index.html
@@ -25,9 +25,16 @@
     <div class="project-gallery">
         <div class="project">
             <a href="virtual-life/">
-                <img src="images/virtualLifePic.png" alt="Placeholder" class="project-image">
+                <img src="images/virtualLifePic.png" alt="virtual-life-image" class="project-image">
                 <h2 class="project-title">Virtual-Life</h2>
                 <p class="project-blurb">A-Level Computer Science coursework</p>
+            </a>
+        </div>
+        <div class="project">
+            <a href="spelling/">
+                <img src="images/spelling.png" alt="spelling-app" class="project-image">
+                <h2 class="project-title">Spelling App</h2>
+                <p class="project-blurb">Game to test spelling ability</p>
             </a>
         </div>
         <div class="project">
