--- a/projects/spelling/about/index.html
+++ b/projects/spelling/about/index.html
@@ -20,6 +20,8 @@
     <h1>Spelling App - About</h1>
 </header>
 <main>
+    <p><a href="../">Go to project.</a></p>
+    <p class="error">Note: This project is a work in progress, this version has <span class="bold">significant</span> errors. Proceed with caution</p>
     <h2>About</h2>
     <p>This spelling game was developed initially in Python and then converted to a web project. This version uses the National Curriculum's words list for years 3 and 4.</p>
     <h2>Further Improvements</h2>
